Adds Views for Website

--- a/api/templates/leagues.html
+++ b/api/templates/leagues.html
@@ -36,7 +36,7 @@
 			{% for i in  data %}
 				<tr>
 					<td>{{i.place}}</td>
-					<td><a class="user_link" href="https://ankileaderboard.pythonanywhere.com/user/{{i.username}}" target="_blank">{{i.username}}</a></td>
+					<td><a class="user_link" href=/user/{{i.username}}" target="_blank">{{i.username}}</a></td>
 					<td style="text-align:right">{{i.xp}}</td>
 					<td style="text-align:right">{{i.time}}</td>
 					<td style="text-align:right">{{i.reviews}}</td>
