--- a/api/templates/header+footer.html
+++ b/api/templates/header+footer.html
@@ -195,10 +195,10 @@
 
 <br><br><br><br><br>
 <footer>
-  <p>© Thore Tyborski 2021 |
-  <a class="footer_link" href="https://github.com/ThoreBor/Anki_Leaderboard">GitHub</a> |<br>
-  Download the add-on from <a class="footer_link" href="https://ankiweb.net/shared/info/41708974">Anki Web</a> |
-	<a class="footer_link" href="https://ankileaderboard.pythonanywhere.com/privacy">Privacy</a></p>
+  <p>© Chris and Eva 2025 |
+  <a class="footer_link" href="https://github.com/tuesd4y/AnkiLeaderboard">GitHub</a> |<br>
+  Download the add-on from <a class="footer_link" href="TODO">Anki Web</a> |
+	<a class="footer_link" href="TODO">Privacy</a></p>
 </footer>
 </body>
 </html>
