Update links with new deploy URL

--- a/api/templates/privacy.html
+++ b/api/templates/privacy.html
@@ -24,7 +24,7 @@
 <div style="background-color: #bdd0fc; font-family: arial, sans-serif; border-radius: 10px;">
 	<h1>Privacy Policy of Anki Leaderboard</h1>
 
-	<p>Anki Leaderboard operates the ankileaderboard.pythonanywhere.com website and the Anki Leaderboard add-on, which provides the SERVICE.</p>
+	<p>Anki Leaderboard operates the leaderboard.tuesd4y.com website and the Anki Leaderboard add-on, which provides the SERVICE.</p>
 
 	<p>This page is used to inform website visitors and add-on users regarding our policies with the collection, use, and disclosure of Personal Information if anyone decided to use our Service.</p>
 
